--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,107 @@
-torch>=1.5
-tensorflow>=2.2
-numpy>=1.16.0
-scipy>=0.19.0
-numba==0.48
-librosa==0.7.2
-phonemizer>=2.2.0
-unidecode==0.4.20
-attrdict
-tensorboardX
-matplotlib
-Pillow
-flask
-tqdm
-inflect
-pysbd
+absl-py==0.10.0
+appdirs==1.4.4
+astroid==2.4.2
+attrdict==2.0.1
+attrs==20.1.0
+audioread==2.1.8
+backcall==0.2.0
 bokeh==1.4.0
-pysbd
-soundfile
-nose==1.3.7
+cachetools==4.1.1
 cardboardlint==1.3.0
+certifi==2020.6.20
+cffi==1.14.2
+chardet==3.0.4
+clldutils==3.5.2
+colorlog==4.2.1
+csvw==1.8.0
+cycler==0.10.0
+Cython==0.29.21
+decorator==4.4.2
+filelock==3.0.12
+future==0.18.2
+fuzzywuzzy==0.18.0
+gdown==3.12.2
+google-auth==1.21.1
+google-auth-oauthlib==0.4.1
+grpcio==1.31.0
+h5py==2.10.0
+idna==2.10
+inflect==4.1.0
+ipykernel==5.3.4
+ipython==7.18.1
+ipython-genutils==0.2.0
+isodate==0.6.0
+isort==4.3.21
+jedi==0.17.2
+Jinja2==2.11.2
+joblib==0.16.0
+jupyter-client==6.1.7
+jupyter-core==4.6.3
+kaldiio==2.15.1
+kiwisolver==1.2.0
+lazy-object-proxy==1.4.3
+librosa==0.7.2
+llvmlite==0.31.0
+Markdown==3.2.2
+MarkupSafe==1.1.1
+matplotlib==3.3.1
+mccabe==0.6.1
+noisereduce==1.1.0
+nose==1.3.7
+numba==0.48.0
+numpy==1.19.1
+oauthlib==3.1.0
+packaging==20.4
+pandas==1.1.1
+parso==0.7.1
+pexpect==4.8.0
+phonemizer==2.2.1
+pickleshare==0.7.5
+Pillow==7.2.0
+pkg-resources==0.0.0
+pooch==1.1.1
+prompt-toolkit==3.0.7
+protobuf==3.13.0
+ptyprocess==0.6.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+Pygments==2.6.1
 pylint==2.5.3
-fuzzywuzzy
-gdown
+pyparsing==2.4.7
+pysbd==0.3.1
+PySocks==1.7.1
+python-dateutil==2.8.1
+pytz==2020.1
+pyworld==0.2.11.post0
+PyYAML==5.3.1
+pyzmq==19.0.2
+regex==2020.7.14
+requests==2.24.0
+requests-oauthlib==1.3.0
+resampy==0.2.2
+rfc3986==1.4.0
+rsa==4.6
+scikit-learn==0.23.2
+scipy==1.5.2
+seaborn==0.10.1
+segments==2.1.3
+six==1.15.0
+SoundFile==0.10.3.post1
+tabulate==0.8.7
+tensorboard==2.3.0
+tensorboard-plugin-wit==1.7.0
+tensorboardX==2.1
+threadpoolctl==2.1.0
+toml==0.10.1
+torch==1.6.0
+tornado==6.0.4
+tqdm==4.48.2
+traitlets==5.0.3
+Unidecode==1.1.1
+uritemplate==3.0.1
+urllib3==1.25.10
+wcwidth==0.2.5
+Werkzeug==1.0.1
+wrapt==1.12.1
+yml==0.0.1
